--- a/Codigo/Modulos/Compras/CapaVistaCompras/CapaVistaCompras.csproj
+++ b/Codigo/Modulos/Compras/CapaVistaCompras/CapaVistaCompras.csproj
@@ -34,6 +34,9 @@
     <Reference Include="CapaControladorCompras">
       <HintPath>..\CapaControladorCompras\bin\Debug\CapaControladorCompras.dll</HintPath>
     </Reference>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="NavegadorVista">
       <HintPath>..\..\..\Componentes\Navegador\Vista\bin\Debug\NavegadorVista.dll</HintPath>
     </Reference>
@@ -102,6 +105,12 @@
     </Compile>
     <Compile Include="confirmarcompra.Designer.cs">
       <DependentUpon>confirmarcompra.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CrystalReport1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CrystalReport1.rpt</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="detallefactura.cs">
       <SubType>Form</SubType>
@@ -206,6 +215,10 @@
     <EmbeddedResource Include="confirmarcompra.resx">
       <DependentUpon>confirmarcompra.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CrystalReport1.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CrystalReport1.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="detallefactura.resx">
       <DependentUpon>detallefactura.cs</DependentUpon>
     </EmbeddedResource>
@@ -242,6 +255,9 @@
     <EmbeddedResource Include="productoscompras.resx">
       <DependentUpon>productoscompras.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
